tests/baselines/reference/missingTypeArguments2.errors.txt
==== tests/cases/compiler/missingTypeArguments2.ts (4 errors) ====
    class A<T> { }
    
    var x: () => A;
                 ~
!!! missingTypeArguments2.ts(3,14): error TS2090: Generic type 'A<T>' requires 1 type argument(s).
    (a: A) => { };
        ~
!!! missingTypeArguments2.ts(4,5): error TS2090: Generic type 'A<T>' requires 1 type argument(s).
    var y: A<A>;
             ~
!!! missingTypeArguments2.ts(5,10): error TS2090: Generic type 'A<T>' requires 1 type argument(s).
    (): A => null;
        ~
!!! missingTypeArguments2.ts(6,5): error TS2090: Generic type 'A<T>' requires 1 type argument(s).